--- a/src/data/grammar/images/assets/mtg-portraits.yaml
+++ b/src/data/grammar/images/assets/mtg-portraits.yaml
@@ -2,6 +2,48 @@
 _proDir: "../src/data/images/showdown/portraits/pros"
 
 mtgPortraitsPros:
+- "[_portraitName:Adrian Sullivan][_portrait:#_proDir#/adrian-sullivan-1.jpg]"
+- "[_portraitName:Andrea Mengucci][_portrait:#_proDir#/andrea-mengucci-1.jpg,andrea-mengucci-2.jpg]"
+- "[_portraitName:Andrew Cuneo][_portrait:#_proDir#/andrew-cuneo-1.jpg,#_proDir#/andrew-cuneo-2.jpg,#_proDir#/andrew-cuneo-3.jpg]"
+- "[_portraitName:Antoine Ruel,Ruel][_portrait:#_proDir#/antoine-ruel-1.jpg]"
+- "[_portraitName:Antonino Da Rosa][_portrait:#_proDir#/antonino-da-rosa-1.jpg,#_proDir#/antonino-da-rosa-2.jpg,#_proDir#/antonino-da-rosa-3.jpg]"
+- "[_portraitName:Bing Luke][_portrait:#_proDir#/bing-luke-1.jpg]"
+- "[_portraitName:Bob Maher#comma# Jr.][_portrait:#_proDir#/bob-maher-1.jpg]"
+- "[_portraitName:Brock Parker][_portrait:#_proDir#/brock-parker-1.jpg]"
+- "[_portraitName:Cedric Phillips][_portrait:#_proDir#/cedric-phillips-1.jpg,#_proDir#/cedric-phillips-2.jpg]"
+- "[_portraitName:Chris Pikula][_portrait:#_proDir#/chris-pikula-1.jpg]"
+- "[_portraitName:Christain Calcano][_portrait:#_proDir#/christian-calcano-1.jpg,#_proDir#/christian-calcano-2.jpg]"
+- "[_portraitName:Conley Woods][_portrait:#_proDir#/conley-woods-1.jpg]"
+- "[_portraitName:Corey Baumeister][_portrait:#_proDir#/corey-baumeister-1.jpg,#_proDir#/corey-baumeister-2.jpg]"
+- "[_portraitName:Darwin Kastle][_portrait:#_proDir#/darwin-kastle-1.jpg,#_proDir#/darwin-kastle-2.jpg]"
+- "[_portraitName:Dave Williams][_portrait:#_proDir#/dave-williams-1.jpg,#_proDir#/dave-williams-2.jpg,osyp-lebedowicz-3.jpg]"
+- "[_portraitName:Dirk Baberowski][_portrait:#_proDir#/dirk-baberowski-1.jpg,#_proDir#/dirk-baberowski-2.jpg]"
+- "[_portraitName:Eric Froehlich][_portrait:#_proDir#/eric-froehlich-1.jpg,#_proDir#/eric-froehlich-2.jpg]"
+- "[_portraitName:Evan Erwin][_portrait:#_proDir#/evan-erwin-1.jpg]"
+- "[_portraitName:Frank Karsten][_portrait:#_proDir#/frank-karsten-1.jpg,#_proDir#/frank-karsten-2.jpg,#_proDir#/frank-karsten-3.jpg,#_proDir#/frank-karsten-4.jpg]"
+- "[_portraitName:Márcio Carvalho][_portrait:#_proDir#/marcio-carvalho-1.jpg]"
+- "[_portraitName:Marshall Sutcliffe][_portrait:#_proDir#/marshall-sutcliffe-1.jpg,#_proDir#/marshall-sutcliffe-2.jpg]"
+- "[_portraitName:Masashi Oiso][_portrait:#_proDir#/masashi-oiso-1.jpg]"
+- "[_portraitName:Matt Severa][_portrait:#_proDir#/matt-severa-1.jpg]"
+- "[_portraitName:Matt Tabak][_portrait:#_proDir#/matt-tabak-1.jpg]"
+- "[_portraitName:Melissa De Tora][_portrait:#_proDir#/melissa-de-tora-1.jpg]"
+- "[_portraitName:Mike Flores][_portrait:#_proDir#/mike-flores-1.jpg]"
+- "[_portraitName:Mike Long][_portrait:#_proDir#/mike-long-1.jpg]"
+- "[_portraitName:Mike Sigrist][_portrait:#_proDir#/mike-sigrist-1.jpg]"
+- "[_portraitName:Olivier Ruel,Ruel][_portrait:#_proDir#/olivier-ruel-1.jpg,#_proDir#/olivier-ruel-2.jpg,#_proDir#/olivier-ruel-3.jpg]"
+- "[_portraitName:Osyp Lebedowicz][_portrait:#_proDir#/osyp-lebedowicz-1.jpg,#_proDir#/osyp-lebedowicz-2.jpg,#_proDir#/dave-williams-3.jpg]"
+- "[_portraitName:Paolo Vitor Damo Da Rosa,PVDDR][_portrait:#_proDir#/pvddr-1.jpg,#_proDir#/pvddr-2.jpg,#_proDir#/pvddr-3.jpg]"
+- "[_portraitName:Raphaël Lévy][_portrait:#_proDir#/rafael-levy-1.jpg]"
+- "[_portraitName:Randy Buehler][_portrait:#_proDir#/randy-buehler-1.jpg]"
+- "[_portraitName:RoboRosewater][_portrait:#_proDir#/roborosewater-1.jpg,#_proDir#/roborosewater-2.jpg]"
+- "[_portraitName:Seth Manfield][_portrait:#_proDir#/seth-manfield-1.jpg]"
+- "[_portraitName:Sheldon Mennery][_portrait:#_proDir#/sheldon-mennery-1.jpg]"
+- "[_portraitName:Shota Yasooka][_portrait:#_proDir#/shota-yahooka-1.jpg]"
+- "[_portraitName:Shuhei Nakamura][_portrait:#_proDir#/shuhei-nakamura-1.jpg]"
+- "[_portraitName:Steve Rubin][_portrait:#_proDir#/steve-rubin-1.jpg]"
+- "[_portraitName:Urza][_portrait:#_proDir#/urza-1.jpg,#_proDir#/urza-2.jpg]"
+
+
 - "[_portraitName:Anton Jonsson][_portrait:#_proDir#/anton-jonsson-1.jpg]"
 - "[_portraitName:“Baby” Huey Jensen][_portrait:#_proDir#/baby-huey-jensen-1.jpg]"
 - "[_portraitName:Ben Stark][_portrait:#_proDir#/ben-stark-1.jpg]"
@@ -20,15 +62,15 @@ mtgPortraitsPros:
 - "[_portraitName:Jarvis Yu][_portrait:#_proDir#/jarvis-yu-1.jpg,#_proDir#/jarvis-yu-2.jpg,#_proDir#/jarvis-yu-3.jpg]"
 - "[_portraitName:Kai Budde][_portrait:#_proDir#/kai-budde-1.jpg,#_proDir#/kai-budde-2.jpg,#_proDir#/kai-budde-3.jpg]"
 - "[_portraitName:LSV,Luis Scott-Vargas][_portrait:#_proDir#/lsv-1.jpg,#_proDir#/lsv-2.jpg,#_proDir#/lsv-3.jpg,#_proDir#/lsv-4.jpg]"
-- "[_portraitName:Mark Rosewater,MaRo][_portrait:#_proDir#/mark-rosewater-1.jpg,#_proDir#/mark-rosewater-2.jpg]"
-- "[_portraitName:Martin Jůza][_portrait:#_proDir#/martin-juza-1.jpg]"
+- "[_portraitName:Mark Rosewater,MaRo][_portrait:#_proDir#/mark-rosewater-1.jpg,#_proDir#/mark-rosewater-2.jpg,#_proDir#/mark-rosewater-3.jpg]"
+- "[_portraitName:Martin Jůza][_portrait:#_proDir#/martin-juza-1.jpg,#_proDir#/martin-juza-2.jpg,#_proDir#/martin-juza-3.jpg,#_proDir#/martin-juza-4.jpg]"
 - "[_portraitName:Matt Nass][_portrait:#_proDir#/matt-nass-1.jpg,#_proDir#/matt-nass-2.jpg]"
 - "[_portraitName:Michael Jacob][_portrait:#_proDir#/michael-jacob-1.jpg]"
 - "[_portraitName:Pascal Maynard][_portrait:#_proDir#/pascal-maynard-1.jpg]"
-- "[_portraitName:Patrick Chapin,Pat Chapin][_portrait:#_proDir#/patrick-chapin-1.jpg]"
+- "[_portraitName:Patrick Chapin,Pat Chapin][_portrait:#_proDir#/patrick-chapin-1.jpg,#_proDir#/patrick-chapin-2.jpg,#_proDir#/patrick-chapin-3.jpg,#_proDir#/patrick-chapin-4.jpg]"
 - "[_portraitName:Paul Cheon,HAUMPH][_portrait:#_proDir#/paul-cheon-1.jpg,#_proDir#/paul-cheon-2.jpg]"
 - "[_portraitName:Paul Rietzl][_portrait:#_proDir#/paul-rietzl-1.jpg]"
-- "[_portraitName:Reid Duke][_portrait:#_proDir#/reid-duke-1.jpg]"
+- "[_portraitName:Reid Duke][_portrait:#_proDir#/reid-duke-1.jpg,#_proDir#/reid-duke-2.jpg,#_proDir#/reid-duke-3.jpg]"
 - "[_portraitName:Rich Hagon][_portrait:#_proDir#/rich-hagon-1.jpg]"
 - "[_portraitName:Richard Garfield][_portrait:#_proDir#/richard-garfield-1.jpg]"
 - "[_portraitName:Sam Black][_portrait:#_proDir#/sam-black-1.jpg]"
@@ -36,10 +78,15 @@ mtgPortraitsPros:
 - "[_portraitName:Shahar Shenhar][_portrait:#_proDir#/shahar-shenhar-1.jpg]"
 - "[_portraitName:Skaff Elias][_portrait:#_proDir#/skaff-elias-1.jpg]"
 - "[_portraitName:Ted Knutson][_portrait:#_proDir#/ted-knutson-1.jpg]"
-- "[_portraitName:Tomoharu Saito][_portrait:#_proDir#/tomoharu-saito-1.jpg]"
+- "[_portraitName:Tomoharu Saito][_portrait:#_proDir#/tomoharu-saito-1.jpg,#_proDir#/tomoharu-saito-2.jpg]"
 - "[_portraitName:Trey Van Cleave][_portrait:#_proDir#/trey-van-cleave-1.jpg]"
 - "[_portraitName:Trick Jarrett][_portrait:#_proDir#/trick-jarrett-1.jpg]"
 - "[_portraitName:William Jensen][_portrait:#_proDir#/william-jensen-1.jpg]"
 - "[_portraitName:Yuuya Watanabe][_portrait:#_proDir#/yuuya-watanabe-1.jpg]"
-# - "[_portraitName:][_portrait:#_proDir#/]"
 
+mtgPortraitsOthers:
+- "[_portraitName:Baby Gabriel Nassif][_portrait:#_proDir#/baby-gabriel-nassif-1.jpg]"
+- "[_portraitName:Bizarro Maro][_portrait:#_proDir#/bizarro-maro-1.jpg]"
+- "[_portraitName:Bizarro Richard Garfield,Evil Richard Garfield][_portrait:#_proDir#/bizarro-richard-garfield-1.jpg]"
+- "[_portraitName:The Ruel Twins,The Ruels,Ruel Brothers][_portrait:#_proDir#/ruel-twins-1.jpg,#_proDir#/ruel-twins-2.jpg]"
+- "[_portraitName:Vampire Mark Flores][_portrait:#_proDir#/vampire-mark-flores-.jpg]"
