--- a/src/data/grammar/images/assets/mtg-portraits.yaml
+++ b/src/data/grammar/images/assets/mtg-portraits.yaml
@@ -3,10 +3,13 @@ _proDir: "../src/data/images/showdown/portraits/pros"
 
 mtgPortraitsPros:
 - "[_portraitName:Adrian Sullivan][_portrait:#_proDir#/adrian-sullivan-1.jpg]"
-- "[_portraitName:Andrea Mengucci][_portrait:#_proDir#/andrea-mengucci-1.jpg,andrea-mengucci-2.jpg]"
+- "[_portraitName:Andrea Mengucci][_portrait:#_proDir#/andrea-mengucci-1.jpg,#_proDir#/andrea-mengucci-2.jpg]"
 - "[_portraitName:Andrew Cuneo][_portrait:#_proDir#/andrew-cuneo-1.jpg,#_proDir#/andrew-cuneo-2.jpg,#_proDir#/andrew-cuneo-3.jpg]"
 - "[_portraitName:Antoine Ruel,Ruel][_portrait:#_proDir#/antoine-ruel-1.jpg]"
+- "[_portraitName:Anton Jonsson][_portrait:#_proDir#/anton-jonsson-1.jpg]"
 - "[_portraitName:Antonino Da Rosa][_portrait:#_proDir#/antonino-da-rosa-1.jpg,#_proDir#/antonino-da-rosa-2.jpg,#_proDir#/antonino-da-rosa-3.jpg]"
+- "[_portraitName:“Baby” Huey Jensen][_portrait:#_proDir#/baby-huey-jensen-1.jpg]"
+- "[_portraitName:Ben Stark][_portrait:#_proDir#/ben-stark-1.jpg]"
 - "[_portraitName:Bing Luke][_portrait:#_proDir#/bing-luke-1.jpg]"
 - "[_portraitName:Bob Maher#comma# Jr.][_portrait:#_proDir#/bob-maher-1.jpg]"
 - "[_portraitName:Brock Parker][_portrait:#_proDir#/brock-parker-1.jpg]"
@@ -16,7 +19,7 @@ mtgPortraitsPros:
 - "[_portraitName:Conley Woods][_portrait:#_proDir#/conley-woods-1.jpg]"
 - "[_portraitName:Corey Baumeister][_portrait:#_proDir#/corey-baumeister-1.jpg,#_proDir#/corey-baumeister-2.jpg]"
 - "[_portraitName:Darwin Kastle][_portrait:#_proDir#/darwin-kastle-1.jpg,#_proDir#/darwin-kastle-2.jpg]"
-- "[_portraitName:Dave Williams][_portrait:#_proDir#/dave-williams-1.jpg,#_proDir#/dave-williams-2.jpg,osyp-lebedowicz-3.jpg]"
+- "[_portraitName:Dave Williams][_portrait:#_proDir#/dave-williams-1.jpg,#_proDir#/dave-williams-2.jpg,#_proDir#/osyp-lebedowicz-3.jpg]"
 - "[_portraitName:Dirk Baberowski][_portrait:#_proDir#/dirk-baberowski-1.jpg,#_proDir#/dirk-baberowski-2.jpg]"
 - "[_portraitName:Eric Froehlich][_portrait:#_proDir#/eric-froehlich-1.jpg,#_proDir#/eric-froehlich-2.jpg]"
 - "[_portraitName:Evan Erwin][_portrait:#_proDir#/evan-erwin-1.jpg]"
@@ -38,19 +41,16 @@ mtgPortraitsPros:
 - "[_portraitName:RoboRosewater][_portrait:#_proDir#/roborosewater-1.jpg,#_proDir#/roborosewater-2.jpg]"
 - "[_portraitName:Seth Manfield][_portrait:#_proDir#/seth-manfield-1.jpg]"
 - "[_portraitName:Sheldon Mennery][_portrait:#_proDir#/sheldon-mennery-1.jpg]"
-- "[_portraitName:Shota Yasooka][_portrait:#_proDir#/shota-yahooka-1.jpg]"
+- "[_portraitName:Shota Yasooka][_portrait:#_proDir#/shota-yasooka-1.jpg]"
 - "[_portraitName:Shuhei Nakamura][_portrait:#_proDir#/shuhei-nakamura-1.jpg]"
 - "[_portraitName:Steve Rubin][_portrait:#_proDir#/steve-rubin-1.jpg]"
 - "[_portraitName:Urza][_portrait:#_proDir#/urza-1.jpg,#_proDir#/urza-2.jpg]"
 
 
-- "[_portraitName:Anton Jonsson][_portrait:#_proDir#/anton-jonsson-1.jpg]"
-- "[_portraitName:“Baby” Huey Jensen][_portrait:#_proDir#/baby-huey-jensen-1.jpg]"
-- "[_portraitName:Ben Stark][_portrait:#_proDir#/ben-stark-1.jpg]"
 - "[_portraitName:Brad Nelson][_portrait:#_proDir#/brad-nelson-1.jpg,#_proDir#/brad-nelson-2.jpg]"
 - "[_portraitName:Brian Bran-Duin][_portrait:#_proDir#/brian-bran-duin-1.jpg,#_proDir#/brian-bran-duin-2.jpg]"
 - "[_portraitName:Brian David-Marshall][_portrait:#_proDir#/brian-david-marshall-1.jpg]"
-- "[_portraitName:Brian Kibler[_portrait:#_proDir#/brian-kibler-1.jpg,#_proDir#/brian-kibler-2.jpg]"
+- "[_portraitName:Brian Kibler][_portrait:#_proDir#/brian-kibler-1.jpg,#_proDir#/brian-kibler-2.jpg]"
 - "[_portraitName:Caleb Durward][_portrait:#_proDir#/caleb-durward-1.jpg]"
 - "[_portraitName:Craig Wescoe][_portrait:#_proDir#/craig-wescoe-1.jpg,#_proDir#/craig-wescoe-2.jpg]"
 - "[_portraitName:David Ochoa,Wrapter][_portrait:#_proDir#/david-ochoa-1.jpg,#_proDir#/david-ochoa-2.jpg,#_proDir#/david-ochoa-3.jpg,#_proDir#/david-ochoa-4.jpg]"
