--- a/src/data/grammar/images/svg-streamer-showdown.yaml
+++ b/src/data/grammar/images/svg-streamer-showdown.yaml
@@ -37,10 +37,8 @@ svgStreamerHashtag:
 
 cardFinder: https://goodgamery.com/api/mtg/image?card=
 
-#_showdownBackgroundImageDirPath: "./data/images/showdown/backgrounds"
-#_showdownBackgroundImageIndex: ["1", "2", "3", "4", "5", "6", "7"]
 _showdownBackgroundImageDirPath: "./data/images/showdown/backgrounds-large"
-_showdownBackgroundImageIndex: ["1"]
+_showdownBackgroundImageIndex: ["1","1","2","3","4","5"]
 
 _showdownBackgroundImageFile: "#_showdownBackgroundImageDirPath#/bg#_showdownBackgroundImageIndex#.jpg"
 
@@ -122,11 +120,12 @@ _portraitDisplayNameVariant:
 - "#_portraitName#"
 - "#_portraitName#"
 - "#playerCategory# #_portraitName#"
+- "[_player:Expert,Guru,Mainstay,Champion,Genius,Pro,Specialist,Master,Virtuoso,Champ]#format# #_player# #_portraitName#"
 - "[_modifier:Biazarro,Evil,#playerCategory#,#characterClass#]#_modifier# #_portraitName#"
 - "[_desc:#adjPersonCharacteristic#,#adj#,#mood#,#genericNickname#]“#_desc#” #_portraitName#"
 - "#_portraitName# a.k.a. “#genericNickname#”"
 - "[_variation:#genericNickname#,“#genericNickname#”]#_variation#"
-- "[_dr:,,Dr. ][_doctorate:, MD, Ph.D.,][_honorific:#_portraitName##comma# Sr.,#_portraitName##comma# Jr.,#_portraitName##comma# Esq.,The Honorable Judge #_portraitName#,#_dr##_portraitName##_doctorate#]#_honorific#"
+- "[_dr:,,Dr. ][_doctorate:, MD, Ph.D.,][_honorific:Sir #_portraitName#,Dame #_portraitName#,#_portraitName##comma# Sr.,#_portraitName##comma# Jr.,#_portraitName##comma# Esq.,The Reverend #_portraitName#,Professor #_portraitName#,Vice-Chancellor #_portraitName#,#their.capitalize# Excellency #_portraitName#,The Honorable Judge #_portraitName#,#_dr##_portraitName##_doctorate#]#_honorific#"
 - "[_very:very,really,extremely][_adj:#adjPersonCharacteristic#,#adj#,#mood#][_desc:#characterClass#,#playerCategory#,#someGuyOrGal#][_variant:Some #_desc#,This #_desc#,#_very.a# #_adj# #_desc#,Some #_desc# named #_portraitName#]#_variant#"
 
 svgStreamerNameStyle: >
@@ -220,12 +219,9 @@ svgShowdownStreamerPortrait3:
 - "[_imgX:801][_imgY:75][_streamerDisplayName3:#_cardDisplayName3#][_cardName:#_card3#][_imgMask:cardArtMask3]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:801][_imgY:75][_streamerDisplayName3:#_cardDisplayName3#][_cardName:#_card3#][_imgMask:cardArtMask3]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:801][_imgY:75][_streamerDisplayName3:#_cardDisplayName3#][_cardName:#_card3#][_imgMask:cardArtMask3]#svgShowdownStreamerCardArtPortrait#"
-- "[_imgX:801][_imgY:75][_streamerDisplayName3:#_cardDisplayName3#][_cardName:#_card3#][_imgMask:cardArtMask3]#svgShowdownStreamerCardArtPortrait#"
-- "[_imgX:801][_imgY:75][_streamerDisplayName3:#_cardDisplayName3#][_cardName:#_card3#][_imgMask:cardArtMask3]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:826][_imgY:115][_streamerDisplayName3:#_portraitName3#][_portraitUrl:#_portraitUrl3#]#svgShowdownStreamerProPortrait#"
 
 svgShowdownStreamerPortrait4: 
-- "[_imgX:989][_imgY:75][_streamerDisplayName4:#_cardDisplayName4#][_cardName:#_card4#][_imgMask:cardArtMask4]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:989][_imgY:75][_streamerDisplayName4:#_cardDisplayName4#][_cardName:#_card4#][_imgMask:cardArtMask4]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:989][_imgY:75][_streamerDisplayName4:#_cardDisplayName4#][_cardName:#_card4#][_imgMask:cardArtMask4]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:1014][_imgY:115][_streamerDisplayName4:#_portraitName4#][_portraitUrl:#_portraitUrl4#]#svgShowdownStreamerProPortrait#"
@@ -234,12 +230,9 @@ svgShowdownStreamerPortrait5:
 - "[_imgX:425][_imgY:355][_streamerDisplayName5:#_cardDisplayName5#][_cardName:#_card5#][_imgMask:cardArtMask5]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:425][_imgY:355][_streamerDisplayName5:#_cardDisplayName5#][_cardName:#_card5#][_imgMask:cardArtMask5]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:425][_imgY:355][_streamerDisplayName5:#_cardDisplayName5#][_cardName:#_card5#][_imgMask:cardArtMask5]#svgShowdownStreamerCardArtPortrait#"
-- "[_imgX:425][_imgY:355][_streamerDisplayName5:#_cardDisplayName5#][_cardName:#_card5#][_imgMask:cardArtMask5]#svgShowdownStreamerCardArtPortrait#"
-- "[_imgX:425][_imgY:355][_streamerDisplayName5:#_cardDisplayName5#][_cardName:#_card5#][_imgMask:cardArtMask5]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:450][_imgY:395][_streamerDisplayName5:#_portraitName5#][_portraitUrl:#_portraitUrl5#]#svgShowdownStreamerProPortrait#"
 
 svgShowdownStreamerPortrait6: 
-- "[_imgX:613][_imgY:355][_streamerDisplayName6:#_cardDisplayName6#][_cardName:#_card6#][_imgMask:cardArtMask6]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:613][_imgY:355][_streamerDisplayName6:#_cardDisplayName6#][_cardName:#_card6#][_imgMask:cardArtMask6]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:613][_imgY:355][_streamerDisplayName6:#_cardDisplayName6#][_cardName:#_card6#][_imgMask:cardArtMask6]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:638][_imgY:395][_streamerDisplayName6:#_portraitName6#][_portraitUrl:#_portraitUrl6#]#svgShowdownStreamerProPortrait#"
@@ -248,12 +241,9 @@ svgShowdownStreamerPortrait7:
 - "[_imgX:801][_imgY:355][_streamerDisplayName7:#_cardDisplayName7#][_cardName:#_card7#][_imgMask:cardArtMask7]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:801][_imgY:355][_streamerDisplayName7:#_cardDisplayName7#][_cardName:#_card7#][_imgMask:cardArtMask7]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:801][_imgY:355][_streamerDisplayName7:#_cardDisplayName7#][_cardName:#_card7#][_imgMask:cardArtMask7]#svgShowdownStreamerCardArtPortrait#"
-- "[_imgX:801][_imgY:355][_streamerDisplayName7:#_cardDisplayName7#][_cardName:#_card7#][_imgMask:cardArtMask7]#svgShowdownStreamerCardArtPortrait#"
-- "[_imgX:801][_imgY:355][_streamerDisplayName7:#_cardDisplayName7#][_cardName:#_card7#][_imgMask:cardArtMask7]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:826][_imgY:395][_streamerDisplayName7:#_portraitName7#][_portraitUrl:#_portraitUrl7#]#svgShowdownStreamerProPortrait#"
 
 svgShowdownStreamerPortrait8: 
-- "[_imgX:989][_imgY:355][_streamerDisplayName8:#_cardDisplayName8#][_cardName:#_card8#][_imgMask:cardArtMask8]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:989][_imgY:355][_streamerDisplayName8:#_cardDisplayName8#][_cardName:#_card8#][_imgMask:cardArtMask8]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:989][_imgY:355][_streamerDisplayName8:#_cardDisplayName8#][_cardName:#_card8#][_imgMask:cardArtMask8]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:1014][_imgY:395][_streamerDisplayName8:#_portraitName8#][_portraitUrl:#_portraitUrl8#]#svgShowdownStreamerProPortrait#"
