--- a/src/data/grammar/images/assets/mtg-portraits.yaml
+++ b/src/data/grammar/images/assets/mtg-portraits.yaml
@@ -88,10 +88,10 @@ mtgPortraitsOthers:
 - "[_portraitName:Aaron Forsythe][_portrait:#_otherDir#/aaron-forsythe-1.jpg]"
 - "[_portraitName:Ants-In-My-Eyes Johnson][_portrait:#_otherDir#/ants-in-my-eyes-johnson-1.jpg]"
 - "[_portraitName:Atlee Hammaker][_portrait:#_otherDir#/atlee-hammaker-1.jpg]"
-- "[_portraitName:Baby Gabriel Nassif][_portrait:#_proDir#/baby-gabriel-nassif-1.jpg]"
+- "[_portraitName:Baby Gabriel Nassif][_portrait:#_otherDir#/baby-gabriel-nassif-1.jpg]"
 - "[_portraitName:Balki Bartokomous][_portrait:#_otherDir#/balki-bartokomous-1.jpg]"
-- "[_portraitName:Bizarro Maro][_portrait:#_proDir#/bizarro-maro-1.jpg]"
-- "[_portraitName:Bizarro Richard Garfield,Evil Richard Garfield][_portrait:#_proDir#/bizarro-richard-garfield-1.jpg]"
+- "[_portraitName:Bizarro Maro][_portrait:#_otherDir#/bizarro-maro-1.jpg]"
+- "[_portraitName:Bizarro Richard Garfield,Evil Richard Garfield][_portrait:#_otherDir#/bizarro-richard-garfield-1.jpg]"
 - "[_portraitName:Bony Joanie][_portrait:#_otherDir#/bony-joanie-1.jpg]"
 - "[_portraitName:Brian Keebler][_portrait:#_otherDir#/brian-keebler-1.jpg]"
 - "[_portraitName:Calamity Jane][_portrait:#_otherDir#/calamity-jane-1.jpg]"
@@ -151,7 +151,7 @@ mtgPortraitsOthers:
 - "[_portraitName:The Queen of Hearts][_portrait:#_otherDir#/queen-of-hearts-1.jpg,#_otherDir#/queen-of-hearts-2.jpg]"
 - "[_portraitName:Reset Smith][_portrait:#_otherDir#/reset-smith-1.jpg]"
 - "[_portraitName:Richard Harrow][_portrait:#_otherDir#/richard-harrow-1.jpg]"
-- "[_portraitName:The Ruel Twins,The Ruels,Ruel Brothers][_portrait:#_proDir#/ruel-twins-1.jpg,#_proDir#/ruel-twins-2.jpg]"
+- "[_portraitName:The Ruel Twins,The Ruels,Ruel Brothers][_portrait:#_otherDir#/ruel-twins-1.jpg,#_otherDir#/ruel-twins-2.jpg]"
 - "[_portraitName:Sam Stoddard][_portrait:#_otherDir#/sam-stoddard-1.jpg]"
 - "[_portraitName:Saul Hudson][_portrait:#_otherDir#/saul-hudson-1.jpg]"
 - "[_portraitName:Scott Larabee][_portrait:#_otherDir#/scott-larabee-1.jpg]"
@@ -167,7 +167,7 @@ mtgPortraitsOthers:
 - "[_portraitName:Toby The Turtle][_portrait:#_otherDir#/toby-turtle-1.jpg]"
 - "[_portraitName:Todd Stevens][_portrait:#_otherDir#/todd-stevens-1.jpg]"
 - "[_portraitName:Usain Bolt][_portrait:#_otherDir#/usain-bolt-1.jpg]"
-- "[_portraitName:Vampire Mike Flores][_portrait:#_proDir#/vampire-mike-flores.jpg]"
+- "[_portraitName:Vampire Mike Flores][_portrait:#_otherDir#/vampire-mike-flores.jpg]"
 - "[_portraitName:A Velociraptor][_portrait:#_otherDir#/velociraptor-1.jpg,#_otherDir#/velociraptor-2.jpg]"
 - "[_portraitName:William Vanderbilt][_portrait:#_otherDir#/william-vanderbilt-1.jpg]"
 - "[_portraitName:Yanni][_portrait:#_otherDir#/yanni-1.jpg]"
