--- a/src/data/grammar/images/assets/mtg-portraits.yaml
+++ b/src/data/grammar/images/assets/mtg-portraits.yaml
@@ -130,7 +130,7 @@ mtgPortraitsOthers:
 - "[_portraitName:Lee Sharpe][_portrait:#_otherDir#/lee-sharpe-1.jpg]"
 - "[_portraitName:Leon Trotsky][_portrait:#_otherDir#/leon-trotsky-1.jpg]"
 - "[_portraitName:Lisa Bonet][_portrait:#_otherDir#/lisa-bonet-1.jpg]"
-- "[_portraitName:Major Asshole][_portrait:#_otherDir#/major-asshole-1.jpg]"
+- "[_portraitName:Major A**hole][_portrait:#_otherDir#/major-asshole-1.jpg]"
 - "[_portraitName:Mark Globus][_portrait:#_otherDir#/mark-globus-1.jpg]"
 - "[_portraitName:Matt Bevers][_portrait:#_otherDir#/matt-bevers-1.jpg]"
 - "[_portraitName:Matt Tabak][_portrait:#_otherDir#/matt-tabak-1.jpg,#_otherDir#/matt-tabak-2.jpg]"
