--- a/src/data/grammar/mtg/cards/mtg-cards.yaml
+++ b/src/data/grammar/mtg/cards/mtg-cards.yaml
@@ -9,6 +9,11 @@
     "[#CARDFINDER.randomCard#]#_cardName1#"
   ],
 
+  randomRealCardExcludeBasics: [
+    "#realCard#",
+    "[#randomCardExcludeBasics#]#_cardName#"
+  ],
+
   randomCardAlone: [
     "#cardAlone#",
     "[#CARDFINDER.randomCard#]#_cardName1#"
