whats the pick - newsbot logos

--- a/src/data/grammar/images/mtg-in-graphics.yaml
+++ b/src/data/grammar/images/mtg-in-graphics.yaml
@@ -44,7 +44,7 @@ inGraphicsStep:
 - "Gesture to the [_what:collection of PTQ Top 8 pins,mustard and ketchup stains,detailed portrait of #anyPersonality#,collection of #creatureTypes# tokens,tiny #itemNoun.s#]#_what# on your playmat"
 - 'Reveal the [_card:Cheatyface,Cheatyface,Entirely Normal Armchair]#_card# hidden underneath #_card1#'
 - 'Draw #_card2# and gaze #adverb# at it'
-- "Tear #_card1# into pieces and [_where:up your nose,into your ears,into your pockets,into your cheeks like a chipmunk,down the front of your pants][_then:eat it,sprinkle them over your opponent's head,cram them #_where#,frantically try to piece them back together]#_then#"
+- "Tear #_card1# into pieces and [_where:up your nose,into your ears,into your pockets,into your cheeks like a chipmunk,down the front of your pants][_then:eat it,sprinkle them over your opponent's head,cram it #_where#,frantically try to piece them back together]#_then#"
 - Move to the beginning of combat step
 - "Ask your opponent [_really:really a,a good,their favorite][_question:“how many cards in hand?”,“mind if I smoke?”,“would you like some #pluralNounOrMassNoun#?”,“got any trades?”,“any fast effects?”,“can I take that back?”,“come here often?”,if #_eitherCard# is #_really# #typeOfCard#,if they think you look like #character#,“just who do you think your are?”,“am I being detained?”,about #massNoun# magic,if it's #occasion#]#_question#"
 - "Tap [_what:too much mana,too little mana,exactly the right amount of mana,#randomNonbasicLandCard#,#count# #basicLands.sIfNeeded#]#_what#"
