--- a/src/data/grammar/vocab/notable-pairs.yaml
+++ b/src/data/grammar/vocab/notable-pairs.yaml
@@ -112,3 +112,5 @@ notablePairs:
 - "[pairPart1:Falcon][pairPart2:Snowman]"
 - "[pairPart1:Kicking][pairPart2:Screaming]"
 - "[pairPart1:Harold][pairPart2:Kumar]"
+- "[pairPart1:Oysters][pairPart2:Grandmas]"
+- "[pairPart1:Scott Pilgrim][pairPart2:the World]"
