--- a/src/data/grammar/vocab/bodyparts.yaml
+++ b/src/data/grammar/vocab/bodyparts.yaml
@@ -36,7 +36,7 @@
     "forehead",
     "pelvis",
     "sternum",
-    "eyebrows",
+    "eyebrow",
     "tongue",
     "jaw"
    ],
@@ -84,7 +84,8 @@
     "pelvis",
     "sternum",
     "eyebrows",
-    "tongue"
+    "tongue",
+    "armpits"
   ],
 
   "bodypartsPlural": [
@@ -167,7 +168,7 @@
     "knees[_isAre:are]",
     "feet[_isAre:are]",
     "toes[_isAre:are]",
-    "gut[_isAre:are]",
+    "gut[_isAre:is]",
     "throat[_isAre:is]",
     "skull[_isAre:is]",
     "moustache[_isAre:is]",
@@ -177,6 +178,7 @@
     "shins[_isAre:are]",
     "skin[_isAre:is]",
     "lips[_isAre:are]",
-    "eyebrows[_isAre:are]"
+    "eyebrows[_isAre:are]",
+    "keister[_isAre:is]"
   ]
 }
